# LPC824Tutorials_Alakart

ADC/: Makefile  main.c
ADC/inc/: pin_mux.h
ADC/src/: pin_mux.c
Blink/: Makefile  led_blinky.c
ButtonBlink/: Makefile  main.c
NewProjectTemplate/: Makefile  main.c
UsartTx/: CMakeCache.txt  CMakeLists.txt  Makefile  UsartTx.mex  all_lib_device.cmake  armgcc.cmake  cmake_install.cmake  flags.cmake  hello_world.mex  output.map
UsartTx/board/: clock_config.c  clock_config.c.bak  clock_config.h  clock_config.h.bak  peripherals.c  peripherals.c.bak  peripherals.h  peripherals.h.bak  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
UsartTx/component/uart/: component_miniusart_adapter.LPC824.cmake
UsartTx/debug/: UsartTx.elf
UsartTx/device/: device_LPC824_CMSIS.LPC824.cmake  device_LPC824_system.LPC824.cmake
UsartTx/drivers/: driver_clock.LPC824.cmake  driver_common.LPC824.cmake  driver_inputmux.LPC824.cmake  driver_inputmux_connections.LPC824.cmake  driver_lpc_gpio.LPC824.cmake  driver_lpc_iocon_lite.LPC824.cmake  driver_lpc_miniusart.LPC824.cmake  driver_power_no_lib.LPC824.cmake  driver_reset.LPC824.cmake  driver_swm.LPC824.cmake  driver_swm_connections.LPC824.cmake  driver_syscon.LPC824.cmake  driver_syscon_connections.LPC824.cmake
UsartTx/release/: UsartTx.elf  UsartTx.hex
UsartTx/source/: main.c
UsartTx/startup/: device_LPC824_startup.LPC824.cmake
UsartTx/utilities/: utilities_misc_utilities.LPC824.cmake  utility_assert_lite.LPC824.cmake  utility_debug_console_lite.LPC824.cmake
UsartTx_2/: Makefile  main.c
UsartTx_2/src/: pin_mux.c
alakart_docs-master/: alakart_BOM.xlsx  programming.md
alakart_docs-master/03-Uart_SWM_C-20240219T115937Z-001/03-Uart_SWM_C/: Makefile  Pin_Assignment.aux  Pin_Assignment.tex~  ReadmeAhmet.txt  main.c
alakart_docs-master/03-Uart_SWM_C_xprintf-20240219T115939Z-001/03-Uart_SWM_C_xprintf/: Makefile  ReadmeAhmet.txt  init.c  main.c  main.c~  xprintf.c
alakart_docs-master/Lecture_Notes/ITU/W2/: keylock.c
alakart_docs-master/Lecture_Notes/ITU/W5_W6_Int/Blink_Systick_PSL/: Makefile  Readme.txt  blink.c
alakart_docs-master/Lecture_Notes/ITU/W5_W6_Int/MRT_INT/: Makefile  mrt.c
alakart_docs-master/Lecture_Notes/ITU/W5_W6_Int/pin_interrupt/: Makefile  Makefile~  Readme.txt  pin_mux.c
alakart_docs-master/Lecture_Notes/ITU/W7_8_ADC/adc_basic/: Makefile  Readme.txt  adc_basic.c
alakart_docs-master/Lecture_Notes/ITU/W7_8_ADC/adc_interrupt/: Makefile  Readme.txt  adc_int.c  pin_mux.c
(+34 files in other folders)
